--- a/index.html
+++ b/index.html
@@ -20,5 +20,48 @@
     <link rel="stylesheet" href="./styles/separador.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
   </head>
-  <body></body>
+  <body>
+    
+    <header class="header">
+      <nav class="nav" aria-label="navegação princiapal">
+        <ul class="nav__list">
+          <li class="menu__toggle">
+            <button class="menu__toggle_icon" aria-lebel="menu haburguer">
+              <img src="/images/menu.svg" alt="menuamburguer">
+            </button>
+          </li>
+          <li class="nav__item">
+            <a href="index.html">
+              <img src="/images/Logo.svg" alt="logoluzecena">
+            </a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Eventos</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Club fidelidade</a>
+          </li>
+          <li class="nav__item">
+            <a href="#" class="nav__link">Sobre nós</a>
+          </li>
+
+          <li class="nav__item nav__item_form">
+            <form action="" class="nav__form">
+              <input type="search" id="localizacao" class="nav__input">
+            </form>
+          </li>
+          <li class="nav__item nav__icons">
+            <a href="#" aria-label="carrinho">
+              <img src="/images/Carrinho.svg" alt="carrinho">
+            </a>
+            <a href="#" aria-label="perfil">
+              <img src="/images/Perfil.svg" alt="perfil">
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+
+  </body>
 </html>
