--- a/index.html
+++ b/index.html
@@ -220,8 +220,14 @@
         
       </ul>
 
-    </section>    
+    </section>
 
+
+    <section class="combo">
+      <div class="combo__container">
+        <h2 class="combo__titulo">Combo <span class="combo__titulo-destaque">Dragon’s Ascent</span></h2>
+      </div>
+    </section>
 
   </body>
 </html>
